...
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorHappy"
                    android:drawableLeft="@drawable/ic_happy_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="HAPPY"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/sad_mood_button"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorSad"
                    android:drawableLeft="@drawable/ic_sad_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="SAD"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/surprised_mood_button"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorSurprised"
                    android:drawableLeft="@drawable/ic_surprised_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="SURPRISED"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/afraid_mood_button"
                    android:layout_row="1"
                    android:layout_column="0"
...
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorAngry"
                    android:drawableLeft="@drawable/ic_angry_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="ANGRY"
                    android:textColor="#000000" />

            </GridLayout>
            <!-- END MOOD SELECTION BUTTONS -->


...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/social_button_zero"

                        android:layout_width="70dp"
                        android:layout_height="wrap_content"

                        android:layout_marginEnd="2dp"

                        android:onClick="selectSocialSituationButton"
                        android:text="0"
                        android:backgroundTint="@android:color/darker_gray" />

                    <Button
                        android:id="@+id/social_button_one"

                        android:layout_width="70dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"

                        android:onClick="selectSocialSituationButton"
                        android:text="1"
                        android:backgroundTint="@android:color/darker_gray" />

                    <Button
                        android:id="@+id/social_button_two_plus"

                        android:layout_width="70dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"

                        android:onClick="selectSocialSituationButton"
                        android:text="2+"
                        android:backgroundTint="@android:color/darker_gray" />

                    <Button
                        android:id="@+id/social_button_crowd"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
...
                        android:text="A Crowd"
                        android:backgroundTint="@android:color/darker_gray" />

                </LinearLayout>

                <Button
                    android:id="@+id/social_button_na"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="2dp"

                    android:layout_gravity="center"

                    android:onClick="selectSocialSituationButton"
                    android:text="N/A"
                    android:backgroundTint="@android:color/darker_gray" />

            </LinearLayout>
            <!-- END SOCIAL SITUATION ENTRY -->


...

                android:visibility="gone"

                app:layout_constraintTop_toBottomOf="@id/add_photo_button"
                app:layout_constraintStart_toStartOf="@id/additional_info_message"
                app:layout_constraintEnd_toEndOf="@id/additional_info_message"
                app:layout_constraintBottom_toTopOf="@id/location_button">

                <ImageView
                    android:id="@+id/user_photo_preview"
                    android:contentDescription="User Provided Photograph"

                    android:layout_width="wrap_content"
...

                android:drawableLeft="@drawable/ic_near_me_black_24dp"

                android:gravity="center"
                android:onClick="getLocation"

                android:text="Attach Current Location (optional)"
                app:layout_constraintBottom_toTopOf="@id/save_mood_event_button"
                app:layout_constraintEnd_toEndOf="@id/mood_selection_buttons"
                app:layout_constraintStart_toStartOf="@id/mood_selection_buttons"
                app:layout_constraintTop_toBottomOf="@id/photo_info" />


...
